# NewMIR

./: CMakeLists.txt  README.md  package.xml  setup.bash
Backend/: Backend.csproj  Program.cs  backend.sln  data.db
Backend/Migrations/: 20240105071423_first_table.Designer.cs  20240105071423_first_table.cs  20240116134436_mig.Designer.cs  20240116134436_mig.cs  20240118024628_fkr.Designer.cs  20240118024628_fkr.cs  20240119021147_migrasii.Designer.cs  20240119021147_migrasii.cs  20240124023848_mighhh.Designer.cs  20240124023848_mighhh.cs  20240124044834_migdh.Designer.cs  20240124044834_migdh.cs  20240124074626_mgihdj.Designer.cs  20240124074626_mgihdj.cs  20240124074957_migrasiiii.Designer.cs  20240124074957_migrasiiii.cs  20240124082324_ejwf.Designer.cs  20240124082324_ejwf.cs  20240126024542_AddImageColumn.Designer.cs  20240126024542_AddImageColumn.cs  20240207034327_migrts.Designer.cs  20240207034327_migrts.cs  20240304073903_gday.Designer.cs  20240304073903_gday.cs  20240307074519_miiee.Designer.cs  20240307074519_miiee.cs  20240307074705_mjwe.Designer.cs  20240307074705_mjwe.cs  20240308030732_mifer.cs  20240308082039_mig23.Designer.cs  20240308082039_mig23.cs  20240313040745_migrasi2.Designer.cs  (+38 more)
Frontend/: Notes.txt  index.html  package-lock.json  package.json  vite.config.js
ros2_ws/src/my_project/: CMakeLists.txt
ros2_ws/src/my_project/config/: cartographer_config.lua
ros2_ws/src/my_project/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/my_project/launch/: bringup.launch.py  cartographer_newmir.launch.py  costmap_filter_info.launch.py  house_world.launch.py  my_turtlebot3_world.launch.py  navigation2_newmir.launch.py  navigation_newmir.launch.py  occupancy_grid_newmir.launch.py
ros2_ws/src/my_project/log/: latest_build
ros2_ws/src/my_project/maps/: keepout_mask.pgm  keepout_mask.yaml  map.pgm  map.yaml
ros2_ws/src/my_project/param/: newmir.yaml
ros2_ws/src/my_project/rviz/: nav2_default_view.rviz
ros2_ws/src/my_project/worlds/: house.world
src/: setup.bash
(+112 files in other folders)
