<?xml version="1.0"?>
<package format="3">
  <name>newmir</name>
  <version>0.0.0</version>
  <description>NewMIR package for navigation and keepout zone</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>

</package>
